force-app/main/default/objects/Contact/fields/npsp__First_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
    <description>The amount of this Contact&apos;s earliest soft credit.</description>
    <inlineHelpText>The amount of the earliest soft credit.</inlineHelpText>
    <label>First Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>