force-app/main/default/objects/Contact/fields/npsp__is_Address_Override__c.field-meta.xml
<CustomField>
    <fullName>npsp__is_Address_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</description>
    <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
    <label>Address Override</label>
    <type>Checkbox</type>
</CustomField>