force-app/main/default/objects/Contact/fields/npsp__Largest_Soft_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
    <description>The date of this Contact&apos;s largest soft credit.</description>
    <inlineHelpText>The date of the largest soft credit.</inlineHelpText>
    <label>Largest Soft Credit Date</label>
    <type>Date</type>
</CustomField>