force-app/main/default/objects/Contact/fields/npsp__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>npsp__Primary_Contact__c</fullName>
    <description>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</description>
    <formula>Account.npe01__One2OneContact__c = Id</formula>
    <inlineHelpText>This is is checked if the user is the Primary Contact on their Account.  The Primary Contact can be edited on the Account.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>