force-app/main/default/objects/Contact/fields/Primary_Affiliation_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Hidden__c</fullName>
    <description>Field used to store the primary affiliation so that it is available in search</description>
    <label>Primary Affiliation (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>