force-app/main/default/objects/Contact/fields/Program_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_Area_of_Interest__c</fullName>
    <label>Program Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance for Period Supplies</fullName>
            </value>
            <value>
                <fullName>Basic Needs Curriculum</fullName>
            </value>
            <value>
                <fullName>Diaper Distribution</fullName>
            </value>
            <value>
                <fullName>Disaster Relief</fullName>
            </value>
            <value>
                <fullName>Funds for Change</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>