force-app/main/default/objects/Contact/fields/Sexual_orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_orientation__c</fullName>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Sexual orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heterosexual or straight</fullName>
            </value>
            <value>
                <fullName>Gay lesbian bisexual or LGBTQIA</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
            <value>
                <fullName>Different identity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>