force-app/main/default/objects/Contact/fields/Status_AFF__c.field-meta.xml
<CustomField>
    <fullName>Status_AFF__c</fullName>
    <description>Hidden field used by DLRS to display Status from primary affiliation record to community users11/2021 MM</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>