force-app/main/default/objects/Contact/fields/stayclassy__Address_Type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Address_Type__c</fullName>
    <label>Address Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>