force-app/main/default/objects/Contact/fields/stayclassy__amount_of_last_donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__amount_of_last_donation__c</fullName>
    <description>Amount of the last donation by this contact</description>
    <label>Amount of Last Donation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>