force-app/main/default/objects/Contact/fields/stayclassy__Amount_Recurring_Donations__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Amount_Recurring_Donations__c</fullName>
    <description>Total amount donated for all recurring donations processed through Classy.</description>
    <label>Amount of Recurring Donations</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>