force-app/main/default/objects/Contact/fields/stayclassy__average_donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__average_donation__c</fullName>
    <formula>IF(stayclassy__sc_total_donations__c &gt; 0, stayclassy__sc_total_donated__c  /   stayclassy__sc_total_donations__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>