force-app/main/default/objects/Contact/fields/stayclassy__Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <length>10</length>
    <type>Text</type>
</CustomField>