force-app/main/default/objects/Contact/fields/stayclassy__Blog__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Blog__c</fullName>
    <label>Blog</label>
    <type>Url</type>
</CustomField>