force-app/main/default/objects/Contact/fields/stayclassy__Classy_Fundraising_Page_Total__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Fundraising_Page_Total__c</fullName>
    <description>Total number of active (have received more than 1 donation) fundraising pages a contact has created using Classy</description>
    <label>Number of Active Fundraising Pages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>