force-app/main/default/objects/Contact/fields/stayclassy__Classy_Related_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Related_Member_Id__c</fullName>
    <description>A comma separated list to store all the related classy member Ids to this Contact</description>
    <label>Classy Related Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>