force-app/main/default/objects/Contact/fields/stayclassy__Classy_Username__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Username__c</fullName>
    <label>Classy Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>