force-app/main/default/objects/Contact/fields/stayclassy__Company__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Company__c</fullName>
    <label>Company/Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>