force-app/main/default/objects/Contact/fields/stayclassy__Data_Refreshed_At__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Data_Refreshed_At__c</fullName>
    <description>Indicates the last time the Classy Engagement data was updated</description>
    <label>Last Update</label>
    <type>DateTime</type>
</CustomField>