force-app/main/default/objects/Contact/fields/stayclassy__date_of_last_donation__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__date_of_last_donation__c</fullName>
    <description>Date of the last donation by this contact</description>
    <label>Date of Last Donation</label>
    <type>Date</type>
</CustomField>