force-app/main/default/objects/Contact/fields/stayclassy__Gender__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Gender__c</fullName>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
            <value>
                <fullName>Gender nonbinary/Genderqueer/Gender non-conforming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>