force-app/main/default/objects/Contact/fields/stayclassy__Languages__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Languages__c</fullName>
    <label>Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>