force-app/main/default/objects/Contact/fields/stayclassy__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>