force-app/main/default/objects/Contact/fields/stayclassy__Number_of_Donations_in_Last_X_Days__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Number_of_Donations_in_Last_X_Days__c</fullName>
    <description>Total number of donations by this Contact in the last X number of days.  This number can be defined in Classy Custom Settings; by default the number is 180 days.</description>
    <inlineHelpText>To change the number of days used to calculate this field, go to Develop &gt; Custom Settings &gt; Classy Settings &gt; Manage &gt; Edit Default</inlineHelpText>
    <label>Number of Donations in Last X Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>