force-app/main/default/objects/Contact/fields/stayclassy__Number_of_Recurring_Donations__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Number_of_Recurring_Donations__c</fullName>
    <description>The number of successfully processed donations associated with a recurring donor profile for donations made through Classy.</description>
    <label>Number of Recurring Donations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>