force-app/main/default/objects/Contact/fields/stayclassy__opt_in__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a contact has indicated they have opted in to receiving communications.</description>
    <label>Classy Opted In</label>
    <type>Checkbox</type>
</CustomField>