force-app/main/default/objects/Contact/fields/stayclassy__sc_member_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_member_id__c</fullName>
    <description>Classy Member ID</description>
    <externalId>true</externalId>
    <label>Classy Member ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>