force-app/main/default/objects/Contact/fields/stayclassy__sc_total_donated__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_total_donated__c</fullName>
    <description>Total amount of donations made through Classy</description>
    <label>Total Donated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>