force-app/main/default/objects/Contact/fields/stayclassy__sc_total_donations__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_total_donations__c</fullName>
    <description>Total number of donations made by this contact</description>
    <label>Number of Donations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>