force-app/main/default/objects/Contact/fields/stayclassy__sc_total_fundraising__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_total_fundraising__c</fullName>
    <description>Total amount of donations received through the Contact&apos;s Classy fundraising pages.</description>
    <label>Total Fundraised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>