force-app/main/default/objects/Contact/fields/stayclassy__Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Shirt_Size__c</fullName>
    <label>Shirt Size</label>
    <length>25</length>
    <type>Text</type>
</CustomField>