force-app/main/default/objects/Contact/fields/stayclassy__Suffix__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Suffix__c</fullName>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>