force-app/main/default/objects/Contact/fields/stayclassy__TEST_Email__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__TEST_Email__c</fullName>
    <label>TEST Email</label>
    <type>Email</type>
</CustomField>