force-app/main/default/objects/Contact/fields/stayclassy__Text_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Text_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Opt In</label>
    <type>Checkbox</type>
</CustomField>