force-app/main/default/objects/Contact/fields/stayclassy__Website__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>