force-app/main/default/objects/Contact/fields/Transgender__c.field-meta.xml
<CustomField>
    <fullName>Transgender__c</fullName>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Transgender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Not transgender (cisgender)</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
            <value>
                <fullName>Different gender identity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>