force-app/main/default/objects/Contact/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>