force-app/main/default/objects/Contact/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteer</label>
    <type>Checkbox</type>
</CustomField>