force-app/main/default/objects/Contact/fields/White_Caucasian_European__c.field-meta.xml
<CustomField>
    <fullName>White_Caucasian_European__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>White/Caucasian/European</label>
    <type>Checkbox</type>
</CustomField>