force-app/main/default/objects/Contact/recordTypes/General_Contact.recordType-meta.xml
<RecordType>
    <fullName>General_Contact</fullName>
    <active>true</active>
    <description>Used for all contacts being manually created.</description>
    <label>General Contact</label>
</RecordType>