force-app/main/default/objects/Contact/recordTypes/stayclassy__stayclassy.recordType-meta.xml
<RecordType>
    <fullName>stayclassy__stayclassy</fullName>
    <active>true</active>
    <description>Contact record added via Classy</description>
    <label>StayClassy</label>
</RecordType>