force-app/main/default/objects/Contact/listViews/All_Contacts_Portal.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Portal</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts - Portal</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>