force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>npsp__Primary_Affiliation__c</columns>
    <columns>npo02__Household__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Account.Member_ID__c</columns>
    <columns>Account.npe01__SYSTEM_AccountType__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.NDBN_Member_Type__c</columns>
    <columns>Status_AFF__c</columns>
    <columns>npsp__Deceased__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>