force-app/main/default/objects/Contact/listViews/BNB_Affiliated_Contact_Portal_Status.listView-meta.xml
<ListView>
    <fullName>BNB_Affiliated_Contact_Portal_Status</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Account.npe01__One2OneContact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Member_Portal_Access__c</columns>
    <columns>Account.APS_Primary_Contact__c</columns>
    <columns>Account.Member_ID__c</columns>
    <columns>Account.Region__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Account.FA_Date_Submitted__c</columns>
    <columns>Account.NDBN_Member_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Diaper_Bank</value>
    </filters>
    <filters>
        <field>Account.NDBN_Member_Type__c</field>
        <operation>equals</operation>
        <value>Certified,Established,Sustaining,Change Leader,APS only</value>
    </filters>
    <filters>
        <field>Account.Member_ID__c</field>
        <operation>notEqual</operation>
        <value>54398,54321,54322</value>
    </filters>
    <filters>
        <field>Member_Portal_Access__c</field>
        <operation>equals</operation>
        <value>Eligible,Enabled-Invited,Active Logged In,Access Issue-Enable,Access Issue-Login,NA-uneligible</value>
    </filters>
    <label>BNB Affiliated Contact Portal Status</label>
</ListView>