force-app/main/default/objects/Contact/listViews/donors.listView-meta.xml
<ListView>
    <fullName>donors</fullName>
    <columns>FULL_NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>npo02__FirstCloseDate__c</columns>
    <columns>npo02__NumberOfClosedOpps__c</columns>
    <columns>npo02__LastCloseDate__c</columns>
    <columns>npo02__TotalOppAmount__c</columns>
    <columns>npo02__AverageAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>stayclassy__sc_total_donations__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Mike Berman Contact</value>
    </filters>
    <label>Mike Berman Contact Donors</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>