force-app/main/default/objects/Contact/listViews/Email_Newsletter.listView-meta.xml
<ListView>
    <fullName>Email_Newsletter</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email_Newsletter__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Newsletter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Email Newsletter</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>