force-app/main/default/objects/Contact/listViews/stayclassy__Classy_Donors.listView-meta.xml
<ListView>
    <fullName>stayclassy__Classy_Donors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>stayclassy__sc_member_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Classy Donors</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>